:bug: Fix unreadable catnip's note blocks

--- a/docs/.vuepress/styles/catnip.scss
+++ b/docs/.vuepress/styles/catnip.scss
@@ -316,8 +316,8 @@ catnip-block .catnip-block-aBlockPlaceholder>*+* {
 }
 
 catnip-block.note {
-    background: #ffffe5;
-    border-color: #d3d7a7;
+    background: #ffff8026;
+    border-color: #c4bd3483;
     color: black;
     box-shadow: 0 .1rem .1rem rgba(0, 0, 0, 0.05), 0 .2rem .3rem rgba(0, 0, 0, 0.1), 0 .3rem .5rem rgba(0, 0, 0, 0.05);
     display: flex;
